cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_230.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bf/bf_enc.c:140: error: DEAD_STORE
  The value written to &ivec (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bf/bf_enc.c:140:9: Write of unused value
138.           }
139.           l2n(tout0, ivec);
140.           l2n(tout1, ivec);
               ^
141.       } else {
142.           n2l(ivec, xor0);
